tests/baselines/reference/typeParameterAsBaseType.errors.txt
==== tests/cases/compiler/typeParameterAsBaseType.ts (4 errors) ====
    // type parameters cannot be used as base types
    // these are all errors
    
    class C<T> extends T { }
                       ~
!!! error TS2073: A class may only extend another class.
    class C2<T, U> extends U { }
                           ~
!!! error TS2073: A class may only extend another class.
    
    interface I<T> extends T { }
                           ~
!!! error TS2075: An interface may only extend another class or interface.
    interface I2<T, U> extends U { }
                               ~
!!! error TS2075: An interface may only extend another class or interface.
    
    